# pace-job-monitoring

./: .gitignore  README.md  pyproject.toml
nvidia_logs/: main.py
report-generator/: generate-manifest.py  package.json
report-generator/src/routes/: +page.js  +page.svelte
report_generator/: package-lock.json
scripts/: build-report  salloc
