[project]
name = "pace-job-monitoring"
version = "0.1.0"
description = "Scripts for monitoring GPU jobs on PACE"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "xmltodict", 
    "typer", 
    "pyspark", 
    "matplotlib", 
    "pandas"
]

[project.scripts]
nvidia-logs = "nvidia_logs.main:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["nvidia_logs"]
namespaces = false
